--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,37 +14,50 @@
         body {
             margin: 0;
             padding: 0;
-            overflow-x: hidden; /* Prevents horizontal scrolling */
+            overflow-x: hidden;
             width: 100%;
-            background: radial-gradient(circle, rgba(97,98,131,1) 0%, rgba(97,98,131,1) 50%, rgba(158,123,155,1) 100%);
+  --s: 20vw; /* control the size*/
+  --c1: #1d1d1d;
+  --c2: #4e4f51;
+  --c3: #3c3c3c;
+  
+  background:
+    repeating-conic-gradient(from 30deg,#0000 0 120deg,var(--c3) 0 50%) 
+     calc(var(--s)/2) calc(var(--s)*tan(30deg)/2),
+    repeating-conic-gradient(from 30deg,var(--c1) 0 60deg,var(--c2) 0 120deg,var(--c3) 0 50%);
+  background-size: var(--s) calc(var(--s)*tan(30deg));
+
         }
 
         /* Top Bar */
         .topbar {
             width: 100%;
-            padding: 5vw;
+            padding: 2vw;
             background-color: #0E1116;
-            height: 6vw;
+            height: 10vw;
+            border-radius: 0% 0% 60% 10%;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
         .topheading {
-            font-size: 6vw;
+            padding: 2vw;
+            font-size: 4vw;
             color: #3675d3;
             font-weight: 500;
         }
 
         button {
-            font-size: 1.5vw;
+            margin:10vw;
+            font-size: 1vw;
             font-weight: 500;
             border: 0.1vw solid #374A67;
-            height: 4vw;
-            width: 10vw;
+            height: 2.5vw;
+            width: 7vw;
             color: #3675d3;
             background: none;
-            border-radius: 100px;
+            border-radius: 50px;
             cursor: pointer;
             transition: background 0.3s ease-in-out;
         }
@@ -59,96 +72,119 @@
             width: 100%;
             display: flex;
             flex-direction: row;
-            opacity: 100;
             background-color: transparent;
             align-items: center;
             justify-content: space-between;
-            gap:20vw;
-            padding: 1vw 10vw;
-
+            gap: 10vw;
+            padding: 1vw 5vw;
         }
 
         /* Blob Styling */
         .blob {
             position: relative;
-            height: 10vw;
-            width: 30vw;
-            font-size: 2vw;
+            height: 6vw;
+            width: 20vw;
+            font-size: 1.5vw;
             color: rgb(216, 225, 240);
-            text-align: center;
+            text-align: justify;
             z-index: 1;
-            animation: pulseBlob 4s infinite ease-in-out;
-
+            animation: pulseBlob 1s ease-in-out;
         }
 
         .blob::before {
-            padding: 5vw 5vw 0vw 11vw;
-            content: 'Online monitoring system for secure assessments.Ensures integrity and fairness in remote evaluations.';
+            padding: 2vw 3vw 0 6vw;
+            content: 'Online monitoring system for secure assessments.';
             position: absolute;
-            border-radius: 10%;
-            width: 40vw;
-            height: 25vw;
-            left: -5vw;
-            top: -4vw;
-            background-color: rgb(14, 114, 148);
+            border-radius: 0vw;
+    
+            width: 25vw;
+            height: 6vw;
+            left: -3vw;
+            top: -2vw;
+            background-image: linear-gradient(to right, rgb(107, 185, 163) , rgb(60, 78, 115));
             z-index: -1;
-            transform: skewY(10deg);
-            animation: rotateBlob 5s infinite ease-in-out, colorChange 5s infinite alternate;
-
+            transform: skewY(5deg);
+            
         }
-/* Blob Styling */
-
-
-
-
-/* Smooth Rotating Effect */
-@keyframes rotateBlob {
-    0% { transform: skewY(-1deg) rotate(0deg); }
-    50% { transform: skewY(1deg) rotate(0deg); }
-    100% { transform: skewY(-1deg) rotate(0deg); }
-}
-
-/* Pulsating Effect */
-@keyframes pulseBlob {
-    0% { transform: scale(1); }
-    50% { transform: scale(1); }
-    100% { transform: scale(1); }
-}
-
-/* Background Color Changing Effect */
-@keyframes colorChange {
-    0% { background-color: rgb(14, 114, 148); }
-    100% { background-color: rgb(30, 170, 200); }
-}
-
-        /* Image Container */
-        .img-container {
-            border-radius: 100%;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            margin-top: 5vw;
-        }
-        .img-container::after{
-            content:'asdsad';
+        .topbar::after{ 
+            content:"";
             position:absolute;
             color:white;
-            height: 100vw;
+            height: 50vw;
             width:100vw;
             z-index: -1;
             top:2vw;
             left:0;
             border-radius: 0% 0% 100% 0%;
-            background-color: #0E1116;
+            background-image: linear-gradient(to bottom,#0E1116, rgb(36, 36, 38));
+           
+        }
+        /* Image Container */
+        .img-container {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            gap:5vw;
+            margin-top: 3vw;
         }
 
         .img-container img {
-            width: 30vw;
-            height: 30vw;
+            width: 15vw;
+            height: 15vw;
         }
 
+        .text {
+            color: wheat;
+            font-size: 2vw;
+            text-align: center;
+        }
+
+        .containerbot {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 1vw;
+            padding: 2vw;
+        }
+
+        .lists {
+            background-color: #44867d;
+            width: 20vw;
+            height: 5vw;
+            color:white;
+            font-size: 1.5vw;
+            padding: 0.5vw;
+            text-align: center;
+            animation: comeinview 1s;
+        }
+        .lists:nth-child(even){
+            top:1vw;
+            transform: skewY(-10deg);
+        }
+        .lists:nth-child(odd){
+            bottom:-1vw;
+            transform: skewY(10deg);
+        }
+        .lists::onhover{
+            
+            transform: skewY(10deg);
+        }
+
+        @keyframes rotateBlob {
+            0% { transform: skewY(-1deg) rotate(0deg); }
+            50% { transform: skewY(1deg) rotate(0deg); }
+            100% { transform: skewY(-1deg) rotate(0deg); }
+        }
+
+        @keyframes colorChange {
+            0% { background-color: rgb(14, 148, 141); }
+            100% { background-color: rgb(33, 207, 184); }
+        }
+
+        @keyframes comeinview {
+            0% { transform: skewX(0); }
+            100% { transform: skewX(10); }
+        }
     </style>
 </head>
 <body>
@@ -158,13 +194,22 @@
     </div>
 
     <div class="maincontainer">
-        <div class="blob"> 
-            
-        </div>
+        <div class="blob"></div>
 
         <div class="img-container">
-            <img src="/stylesheet/original-e9e50db8bb75bfc3cd56779c716e5914.gif" alt="E-Proctor GIF">
+            <img style="top:-10vw;width:5vw;height: 5vw;" src="/stylesheet/surveillance.png" alt="E-Proctor GIF">
+            <img style="right:-1vw;width:10vw;height: 10vw;" src="/stylesheet/work.png" alt="E-Proctor GIF">
+        
         </div>
     </div>
+
+    <div class="containerbot">
+        <div class="lists">Real-Time Face Recognition</div>
+        <div class="lists">Automated Attendance Logging</div>
+        <div class="lists">Secure Data Storage</div>
+        <div class="lists">Scalable & Optimized</div>
+    </div>
+
+    <div class="text">Made with ❤ by HAR AYU</div>
 </body>
 </html>
