Session cookie setup with index.js,routes,database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -190,7 +190,9 @@
 <body>
     <div class="topbar">
         <div class="topheading">E-Proctor</div>
-        <button>Login</button>
+        <form method="get" action="/login">
+        <button type="submit">Login</button>
+        </form>
     </div>
 
     <div class="maincontainer">
