Updated ejs for Final Changes

--- a/views/pdfsummary.ejs
+++ b/views/pdfsummary.ejs
@@ -70,58 +70,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Upload Your Profile Picture</h1>
+        <h1>Get summary pdf of your work report:</h1>
         <div class="upload-box">
-            <button class="upload-label" onclick="captureImage()">Capture and Save Image</button>
-            <video id="video" width="100%" height="auto" autoplay muted style="max-width: 90%; border-radius: 1vw; border: 2px solid #4e4f51;"></video>
-            <canvas id="canvas" style="display: none;"></canvas>
+            <button class="upload-label" id="downloadPdfButton">Download</button>
+           
         </div>
-        <img id="preview" style="display: none;"/>
         <form method="GET" action="/userpro">        
             <button class="submit-btn" type="submit">Return Home</button>
         </form>
 
         </div>
 
-    <script>
-        const video = document.getElementById('video');
-        const canvas = document.getElementById('canvas');
-        const photo = document.getElementById('preview');
+        <script src="/attendance.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-        async function startCamera() {
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                video.srcObject = stream;
-            } catch (err) {
-                console.error("Error accessing the camera", err);
-            }
-        }
-        let imageDataUrl = null;
-
-        function captureImage() {
-            canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
-        imageDataUrl = canvas.toDataURL('image/jpeg'); // Convert image to Base64
-        photo.src = imageDataUrl;
-        photo.style.display = "block";
-
-        // Send image to Node.js server
-        if(imageDataUrl==null){
-                console.error("image not taken");
-            }else{
-                    fetch('/uploadprofile', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: imageDataUrl })  // Send image data
-                })
-                .then(response => response.json())
-                .then(data => console.log('Image saved:', data))
-                .catch(error => console.error('Error:', error));   
-            }
-        }
-        
-        startCamera();
-    </script>
 </body>
 </html>
