Updated readme and removed jwt auth

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -200,7 +200,7 @@
     <div style="width:100%;display:flex;padding:3vw;justify-content:center;">
             <div class="loginbox">
         <div style="text-align: center;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">LOGIN</div>
-        <form method="post">
+        <form method="get" action="/userpro">
             <div><input class="texts" name="name" value="uname"></input>
             </div>
             <div>
