Updated images,views and readme.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -213,6 +213,6 @@
 </div>
 
 
-    <div class="text">Made with ❤ by HAR AYU</div>
+    <div class="text">Made with ❤ by HARSHIT K</div>
 </body>
 </html>
