--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -323,7 +323,7 @@
          <!-- Attendance Log -->
         </div>
 
-    <div class="text">Made with ❤ by HAR AYU</div>
+    <div class="text">Made with ❤ by HARSHITK</div>
     </div>
 </body>
 <script defer src = "/script.js"></script>
