--- a/views/home.ejs
+++ b/views/home.ejs
@@ -199,8 +199,8 @@
         <div class="blob"></div>
 
         <div class="img-container">
-            <img style="top:-10vw;width:5vw;height: 5vw;" src="/stylesheet/surveillance.png" alt="E-Proctor GIF">
-            <img style="right:-1vw;width:10vw;height: 10vw;" src="/stylesheet/work.png" alt="E-Proctor GIF">
+            <img style="top:-10vw;width:5vw;height: 5vw;" src="/surveillance.png" alt="E-Proctor GIF">
+            <img style="right:-1vw;width:10vw;height: 10vw;" src="/work.png" alt="E-Proctor GIF">
         
         </div>
     </div>
@@ -212,6 +212,6 @@
         <div class="lists">Scalable & Optimized</div>
     </div>
 
-    <div class="text">Made with ❤ by HAR AYU</div>
+    <div class="text">Made with ❤ by HARSHITK</div>
 </body>
 </html>
